noinst_LIBRARIES = libEngine.a
libEngine_a_SOURCES = Asset/Font.c Asset/glTF.c Asset/Image.c Asset/Metadata.c Asset/NMesh.c Asset/Ogg.c Asset/TGA.c Asset/Wave.c Audio/Audio.c Audio/Clip.c Audio/Source.c Engine/Component.c Engine/Config.c Engine/ECSInit.c Engine/ECSystem.c Engine/Engine.c Engine/Entity.c Engine/Event.c Engine/IO.c Engine/Job.c Engine/Resource.c Input/Input.c Render/Frame.c Render/Material.c Render/Model.c Render/Render.c Render/Shader.c Render/Systems.c Render/Texture.c Scene/Camera.c Scene/Scene.c Scene/ScriptHost.c Scene/Transform.c Script/Script.c System/AtomicLock.c System/Log.c System/Memory.c System/System.c UI/Text.c UI/UI.c
libEngine_a_CPPFLAGS = -DRENDER_DRIVER_BUILTIN -I$(srcdir)/../Include -I$(srcdir)/../Deps -I$(srcdir)/../Deps/Lua -I$(srcdir)/../Deps/PhysFS
