noinst_LTLIBRARIES = libOpenGLDriver.la
libOpenGLDriver_la_SOURCES = \
	glad.c \
	GLBuffer.c \
	GLDevice.c \
	GLDrv.c \
	GLShader.c \
	GLTexture.c \
	GLX11.c
libOpenGLDriver_la_CPPFLAGS = -DRENDER_DRIVER_BUILTIN -I$(srcdir)/../../Include -I$(srcdir)/../../Deps -I$(srcdir)/../../Deps/Lua -I$(srcdir)/../../Deps/PhysFS -I$(srcdir)/Include
